003_tasks/004_sprint_07-05/003_signups-service/01_service-lumen/01_service/1_delete_notes/sign-ups-fi/etc/kubernetes/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: academic-administration
  labels:
    name: sign-ups-app
