003_tasks/004_sprint_07-05/003_signups-service/01_service-lumen/01_service/1_delete_notes/sign-ups-fi/etc/kubernetes/production/deployment.api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sign-ups-app
  name: sign-ups-app
  namespace: academic-administration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sign-ups-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        namespace: academic-administration
        app: sign-ups-app
    spec:
      restartPolicy: Always
      containers:
        - name: sign-ups-app-kernel
          image: PHP_IMAGE_NAME
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            capabilities:
              add:
                - SYS_PTRACE
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
