003_tasks/004_sprint_07-05/003_signups-service/01_service-lumen/01_service/1_delete_notes/sign-ups-fi/etc/kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sign-ups-app
  name: sign-ups-service
  namespace: academic-administration
spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30357
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: sign-ups-app
  sessionAffinity: None
  type: NodePort
